Improved nothing dark mode colors. More consistent category padding. Fixed null points by null for jobs.

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-    @apply scroll-pt-2;
+    @apply scroll-pt-4;
 }
 
 body {
